# veno

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  run
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: checker.rs  config.rs  lib.rs
core/src/artifact/: checker.rs  mod.rs  version.rs  version_checker.rs
core/src/artifact/source/: artifacthub.rs  dockerhub.rs  github.rs  mod.rs
core/src/notifier/: email.rs  google_chat.rs  mod.rs  slack.rs  webhook.rs
core/src/sink/: email.rs  google_chat.rs  mod.rs  slack.rs
core/src/source/: mod.rs
docs/: artifacts.md  config.md  notifiers.md  whats_working.md
examples/: CONFIG.md  config.json
src/: checker.rs  config.rs  endpoints.rs  main.rs
veno-cli/: Cargo.toml
veno-cli/src/: main.rs
veno-core/: Cargo.toml
veno-core/src/: app.rs  config.rs  error.rs  lib.rs
veno-core/src/artifact/: mod.rs  version_checker.rs
veno-core/src/artifact/source/: artifacthub.rs  dockerhub.rs  github.rs  mod.rs
veno-core/src/notifier/: console.rs  email.rs  google_chat.rs  mod.rs  slack.rs  webhook.rs
veno-web/: Cargo.toml
veno-web/src/: endpoints.rs  main.rs  server.rs
veno-web/src/api/: errors.rs  mod.rs  openapi.rs  version.rs
veno-web/src/api/artifacts/: handlers.rs  mod.rs  routes.rs
veno-web/src/api/notifiers/: handlers.rs  model.rs  routes.rs
veno-web/src/commands/: artifact_commands.rs  artifact_handlers.rs  mod.rs  notifier_commands.rs
veno-web/src/resources/: errors.rs  mod.rs  openapi.rs
veno-web/src/resources/v1/: mod.rs
veno-web/src/resources/v1/artifacts/: handlers.rs  model.rs  routes.rs  service.rs
veno-web/src/resources/v1/notifiers/: handlers.rs  mod.rs  model.rs  routes.rs
web/: Cargo.toml
web/src/: endpoints.rs  main.rs
