[package]
name = "neveno"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
config = "0.14.1"
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"                                             # Optional, only if you plan to parse JSON
reqwest = { version = "0.12.9", features = ["json"] }
