[workspace]
members = ["veno-cli", "veno-core", "veno-web"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.97"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
