[package]
name = "neveno-core"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"                                    # Optional, only if you plan to parse JSON
reqwest = { version = "0.12.9", features = ["json"] }
anyhow = "1.0.93"
once_cell = "1.20.2"
