[package]
name = "veno-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }

config = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1.20"
lettre = "0.11"
regex = "1.11.1"
mockito = "1.6.1"
futures = "0.3.31"
