[package]
name = "veno-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }

config = "0.15"
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1.20"
lettre = "0.11"
regex = "1.11"
mockito = "1.6"
