[package]
name = "veno-web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
veno-core = { path = "../veno-core" }
clap = { version = "4.0", features = ["derive"] }
axum = "0.8.3"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
